--- a/eng/basic_times/package.json
+++ b/eng/basic_times/package.json
@@ -6,7 +6,7 @@
   "author": "Space307",
   "license": "MIT",
   "scripts": {
-    "build": "webpack",
+    "build": "webpack --watch",
     "start": "webpack-dev-server"
   },
   "dependencies": {
@@ -30,6 +30,7 @@
     "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-1": "6.24.1",
+    "css-loader": "~1.0.0",
     "eslint": "^4.14.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-prettier": "^3.1.0",
@@ -40,7 +41,10 @@
     "eslint-plugin-react": "^7.5.1",
     "flow-bin": "0.72.0",
     "flow-typed": "^2.4.0",
+    "node-sass": "^4.11.0",
     "prettier": "^1.14.3",
+    "sass-loader": "~7.1.0",
+    "style-loader": "~0.23.1",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.1",
     "webpack-dev-server": "^3.1.1"
